# Mechatronics-Projects

./: README.md
MiniProject 1/: README.md
MiniProject 1/Codes/: Q1_1.py  Q1_2.py  Q1_3.py  Q2.py
MiniProject 1/Codes/mpu6050/: mpu6050.ino
MiniProject 2 - FKP IKP/: README.md
MiniProject 2 - FKP IKP/Codes/: Simulation.mlx  systematicIKP.mlx  ~$Report.docx  ~WRL3843.tmp
MiniProject 3 - Simscape/Codes/: Jacobian.mlx  MiniProject3.slx  Test_Jacobian.mlx
MiniProject 4 - Dynamics/Codes/: modeling_R2020b.slx  modeling_R2020b.slxc  motions_for_simulink.m  ploting_results.m
MiniProject 4 - Dynamics/Estimation/: MP4.m  Test.m
MiniProject 5 - Moveit/Codes/myur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
MiniProject 5 - Moveit/Codes/myur5_moveit_config/config/: fake_controllers.yaml  gazebo_ur5.urdf  joint_names.yaml  ompl_planning.yaml  ur5.srdf
MiniProject 5 - Moveit/Codes/myur5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  gazebo.launch  ur5.launch  (+11 more)
MiniProject 6 - Gazebo/Codes/: pcolor_-0.5and0.py  pcolor_1.7and1.py
MiniProject 6 - Gazebo/Codes/turtlebot3_mech_project/: CMakeLists.txt  package.xml
MiniProject 6 - Gazebo/Codes/turtlebot3_mech_project/launch/: turtlebot3_mech_project_world.launch
MiniProject 6 - Gazebo/Codes/turtlebot3_mech_project/models/turtlebot3_mech_project_world/: model-1_4.sdf  model.sdf
MiniProject 6 - Gazebo/Codes/turtlebot3_mech_project/src/: test.py
MiniProject 6 - Gazebo/Codes/turtlebot3_mech_project/worlds/: turtlebot3_mech_project_world.world
(+4 files in other folders)
